[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/CatHead.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=3]

[node name="Menu" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 6.0
margin_top = 5.0
margin_right = 315.0
margin_bottom = 35.0

[node name="MouseSlider" type="HSlider" parent="."]
margin_left = 20.0
margin_top = 13.0
margin_right = 215.0
margin_bottom = 27.0
min_value = 0.15
max_value = 1.0
step = 0.01
value = 0.4
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 224.0
margin_top = 12.0
margin_right = 320.0
margin_bottom = 28.0

[node name="ResumeButton" type="Button" parent="HBoxContainer"]
margin_right = 48.0
margin_bottom = 16.0
text = "resume"

[node name="QuitButton" type="Button" parent="HBoxContainer"]
margin_left = 52.0
margin_right = 79.0
margin_bottom = 16.0
text = "quit"

[node name="CatBox" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -32.0

[node name="Cat1" type="TextureRect" parent="CatBox"]
visible = false
margin_right = 23.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource( 1 )

[node name="Cat2" type="TextureRect" parent="CatBox"]
visible = false
margin_right = 23.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource( 1 )

[node name="Cat3" type="TextureRect" parent="CatBox"]
visible = false
margin_right = 23.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource( 1 )

[node name="Cat4" type="TextureRect" parent="CatBox"]
visible = false
margin_right = 23.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource( 1 )

[node name="Cat5" type="TextureRect" parent="CatBox"]
visible = false
margin_right = 23.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource( 1 )

[connection signal="value_changed" from="MouseSlider" to="." method="_on_MouseSlider_value_changed"]
[connection signal="button_up" from="HBoxContainer/ResumeButton" to="." method="_on_ResumeButton_button_up"]
[connection signal="button_up" from="HBoxContainer/QuitButton" to="." method="_on_QuitButton_button_up"]
[connection signal="button_up" from="HBoxContainer/QuitButton" to="HBoxContainer/QuitButton" method="_on_QuitButton_button_up"]
